--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         
         .body{
-            background: url("./src/snack.jpg"); 
+            background: url("snack.jpg"); 
             min-height: 100vh;
             background-size: 100vw 100vh;
             background-repeat: no-repeat;
